dlss-swapper: Add version v1.1.7

--- a/bucket/dlss-swapper.json
+++ b/bucket/dlss-swapper.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "https://raw.githubusercontent.com/ScoopInstaller/Scoop/master/schema.json",
     "version": "1.1.7",
     "description": "DLSS Swapper is a tool that allows you to conveniently download, manage, and swap DLSS dlls allowing you to upgrade or downgrade DLSS version in a game without the game needing an update.",
     "homepage": "https://github.com/beeradmoore/dlss-swapper",
