--- a/bucket/dlss-swapper.json
+++ b/bucket/dlss-swapper.json
@@ -3,6 +3,7 @@
     "version": "1.1.7",
     "description": "DLSS Swapper is a tool that allows you to conveniently download, manage, and swap DLSS dlls allowing you to upgrade or downgrade DLSS version in a game without the game needing an update.",
     "homepage": "https://github.com/beeradmoore/dlss-swapper",
+    "license": "GPL-3.0",
     "architecture": {
         "64bit": {
             "url": "https://github.com/beeradmoore/dlss-swapper/releases/download/v1.1.7/DLSS.Swapper-1.1.7.0-portable.zip",
